--- a/style.css
+++ b/style.css
@@ -62,6 +62,11 @@ input[type='text'] {
     height: 250px;
     display: flex;
 }
+p#loadingText {
+    display: none;
+    font-size: 1.5em;
+    font-weight: bold;
+}
 .button {
     width: 100%;
     font-size: 1.2em;
@@ -70,12 +75,22 @@ input[type='text'] {
     margin-block: 10px;
     padding: 10px 20px;
     border: 2px solid hsl(240, 100%, 60%);
+    color: hsl(0, 0%, 10%);
     border-radius: 10px;
     cursor: pointer;
     transition: 0.5s;
 }
 .button:hover {
     background-color: hsl(240, 100%, 60%);
+    color: hsl(0, 0%, 100%);
+}
+.button.download {
+    border: 2px solid hsl(120, 100%, 55%);
+    display: none;
+}
+
+.button.download:hover {
+    background-color: hsl(120, 100%, 55%);
     color: hsl(0, 0%, 100%);
 }
 .empty-input {
