changed the document height from viewport height to small viewport height

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     width: 100%;
-    min-height: 100vh;
+    min-height: 100svh;
     box-sizing: border-box;
 }
 .container {
